--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "core-js": "^3.8.3",
+    "element-ui": "^2.15.14",
     "vue": "^2.6.14",
     "vue-router": "^3.6.5"
   },
@@ -18,23 +20,37 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
+
+ 
     "root": true,
+ 
     "env": {
+ 
       "node": true
+ 
     },
+ 
     "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
+ 
+      "plugin:vue/essential"
+ 
+    
     ],
+ 
     "parserOptions": {
-      "parser": "@babel/eslint-parser"
+ 
+      "parser": "babel-eslint"
+ 
     },
+ 
     "rules": {}
+
+
+  
   },
   "browserslist": [
     "> 1%",
